--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,1 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
+
+body {
+    scrollbar-width: none !important;   /* Firefox */
+}   
